--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<html>
-    <head>
-        <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="css/style.css"/>
-        <title>Matrix</title>
-    </head>
-    <body>
-        <script src="js/main.js"></script>
-    </body>
+  <title>Title</title>
+  
+  <!-- HTML -->
+  
+
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header class="Menu">
+    <div class="Title">
+      <div class="Title">
+        <h1>Title</h1>
+      </div>
+    </div>
+    <ul>
+      <li>
+        <a href="">Start</a>
+      </li>
+      <li>
+        <a href="">Contact</a>
+      </li>
+     <li>
+       <a href=""> About</a>
+     </li>
+    </ul>
+    
+    <form action="">
+      <input type="text" placeholder="Search here">
+      <button type="submit" class="Button"> Go</button>
+    </form>
+  </header>
+  <div>
+    
+    <div class="Content">
+      <hr>
+      <p>
+        Content
+      </p>
+      <hr>
+    </div>
+  </div>
+  <div class="Footer">
+    <footer>
+      <h5>footer</h5>
+    </footer>
+  </div>
+  <script src="main.js"></script>
+</body>
 </html>
